Update algo notebook example

--- a/doc/manuals/python/algo.ipynb
+++ b/doc/manuals/python/algo.ipynb
@@ -247,6 +247,29 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kwiver.vital.algo import algorithm_factory as af, _algorithm\n",
+    "from kwiver.vital import types as kvt\n",
+    "\n",
+    "class PyImageIO(_algorithm):\n",
+    "    @static\n",
+    "    def create(name: str) -> PyImageIO:\n",
+    "        pass\n",
+    "    @static\n",
+    "    def registered_names() -> list:\n",
+    "        pass\n",
+    "    def type_name() -> str:\n",
+    "        pass\n",
+    "    @static\n",
+    "    def get_nested_algo_configuration() -> None:\n",
+    "        pass"
+   ]
   }
  ]
 }
