--- a/doc/manuals/python/algo.ipynb
+++ b/doc/manuals/python/algo.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "This registration block is very similar to the process for registering a C++ algo inst during runtime. Here we leverage python's special treatment of dunder (or magic if you prefer) methods to inform Kwiver of this algo instantiation. \n",
     "\n",
-    "Note that at this point, our algo impl, while useable, is still abstract as we have not provided concrete implementations of any of the exposed methods.\n",
+    "Note that at this point, our algo implementation, while useable, is still abstract as we have not provided concrete implementations of any of the exposed methods.\n",
     "\n",
     "Additionally, we need to expose and implement the ability to configure the algo\n",
     "with Kwiver config blocks. These are supported in Python via bindings that expose the config block under `kwiver.vital.config`\n",
