--- a/doc/manuals/python/algo.ipynb
+++ b/doc/manuals/python/algo.ipynb
@@ -221,7 +221,7 @@
    "source": [
     "C++ arrow from Python\n",
     "\n",
-    "Arrows currently existing with a C++ implementation can be accesed and utilized directly from Python code with no need for any extra steps.\n",
+    "Arrows currently existing with a C++ implementation can be accessed and utilized directly from Python code with no need for any extra steps.\n",
     "The process is, much like above, simply loading in the arrow for use, almost exactly the way it's done by C++"
    ],
    "cell_type": "markdown",
