--- a/doc/manuals/python/algo.ipynb
+++ b/doc/manuals/python/algo.ipynb
@@ -47,7 +47,7 @@
     "Implementing an abstract algo in Python and then instantiating it is slightly more complex and covered in a later piece of documentation.\n",
     "\n",
     "\n",
-    "Below we have selected the Image IO c++ algo to instantiate"
+    "Below we have selected the Image IO C++ algo to instantiate"
    ],
    "cell_type": "markdown",
    "metadata": {}
