Update python Kwiver docs

--- a/doc/manuals/python/PythonPipelines.ipynb
+++ b/doc/manuals/python/PythonPipelines.ipynb
@@ -18,75 +18,68 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
    "source": [
     "Python Pipelining\n",
     "=================\n",
     "\n",
     "The following code block provides a very basic, rudimentary programatic execution of a very simple pipeline. This boiler plate example \"borrowed\" from Tom Osika's very well put together pipeline demo found at https://github.com/tao558/kwiver_demo"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# import modules needed for programatic process execution\n",
-    "from kwiver.sprokit.adapters import adapter_data_set, embedded_pipeline\n",
-    "# define path to pipeline file\n",
-    "\n",
-    "ep = embedded_pipeline.EmbeddedPipeline()\n",
-    "ep.build_pipeline(path_to_pipe_file)\n",
-    "\n",
-    "ep.start()\n",
-    "\n",
-    "ads_in = adapter_data_set.AdapterDataSet.create()\n",
-    "ads_in[\"image\"] = im_container\n",
-    "ep.send(ads_in)\n",
-    "ep.send_end_of_input()\n",
-    "\n",
-    "while True:\n",
-    "    ads_out = ep.receive()\n",
-    "\n",
-    "    if ads_out.is_end_of_data():\n",
-    "        break\n",
-    "\n",
-    "\n",
-    "import time\n",
-    "time.sleep(5)\n",
-    "ep.stop()\n"
-   ]
+    "# import modules needed for programatic process execution\r\n",
+    "from kwiver.sprokit.adapters import adapter_data_set, embedded_pipeline\r\n",
+    "# define path to pipeline file\r\n",
+    "\r\n",
+    "ep = embedded_pipeline.EmbeddedPipeline()\r\n",
+    "ep.build_pipeline(path_to_pipe_file)\r\n",
+    "\r\n",
+    "ep.start()\r\n",
+    "\r\n",
+    "ads_in = adapter_data_set.AdapterDataSet.create()\r\n",
+    "ads_in[\"image\"] = im_container\r\n",
+    "ep.send(ads_in)\r\n",
+    "ep.send_end_of_input()\r\n",
+    "\r\n",
+    "while True:\r\n",
+    "    ads_out = ep.receive()\r\n",
+    "\r\n",
+    "    if ads_out.is_end_of_data():\r\n",
+    "        break\r\n",
+    "\r\n",
+    "\r\n",
+    "import time\r\n",
+    "time.sleep(5)\r\n",
+    "ep.stop()\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "Now that we've demonstrated a basic implementation, we run a more complex pipeline from the python interpreter."
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from kwiver.sprokit.adapters import adapter_data_set, embedded_pipeline\n"
-   ]
-  },
-  {
-   "source": [
-    "Of course, we can also run a pipeline from the command line with Kwiver's runner applet. Kwiver's pipelines allow for the execution of both Python and C++ processes provided that compatible data types are leveraged. "
+    "from kwiver.sprokit.adapters import adapter_data_set, embedded_pipeline\r\n"
    ],
-   "cell_type": "markdown",
+   "outputs": [],
    "metadata": {}
   },
   {
-   "source": [
-    "\\#TODO Mixed pipeline with non vital datatype... is this possible? I mean obviously if the python process converts from vital to non vital to vital but I mean just straight up works w/o need for a lot of user driven conversion code."
-   ],
    "cell_type": "markdown",
+   "source": [
+    "Of course, we can also run a pipeline from the command line with Kwiver's runner applet. Kwiver's pipelines allow for the execution of both Python and C++ processes provided that compatible data types are leveraged. "
+   ],
    "metadata": {}
   }
  ]
