--- a/doc/manuals/python/process.ipynb
+++ b/doc/manuals/python/process.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now that we have a basic data type, we need to create processes that can handle this datatype. Preexisting Kwiver processes will not support it as this data type is outside of vital. For demonstration purposes, the KwiverProcess utility mixin will used.\r\n"
+    "Now that we have a basic data type, we need to create processes that can handle this datatype. Preexisting Kwiver processes will not support it as this data type is outside of vital. For demonstration purposes, the KwiverProcess utility mixin will be used.\r\n"
    ],
    "metadata": {}
   },
